dnl Process this file with autoconf to produce a configure script.
AC_INIT(array.c)
AC_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl Check for X path.
AC_PATH_X


dnl Checks for libraries.
old_LDFLAGS="$LDFLAGS"
if test "$x_libraries" != ""
then
	LDFLAGS="$LDFLAGS -L$x_libraries"
fi

AC_CHECK_LIB(m, sqrt)
AC_CHECK_LIB(X11, XOpenDisplay)
AC_CHECK_LIB(Xt, XtToolkitInitialize)
AC_CHECK_LIB(Xext,XShmPutImage)

AC_CHECK_LIB(jpeg,jpeg_simple_progression)
AC_CHECK_LIB(termcap, tgetent)

dnl special check for readline. 
MAKEREAD=''
AC_CHECK_LIB(readline, readline)
if test "`echo $LIBS | grep readline  `" = "" 
then
	MAKEREAD='readline/libreadline.a'
	READLINE_LIB='-L readline -lhistory -lreadline'
	AC_CONFIG_SUBDIRS(readline)
fi 



AC_CHECK_LIB(z,deflate)
AC_CHECK_LIB(proj,pj_fwd)
AC_CHECK_LIB(tiff,TIFFIsTiled)
AC_CHECK_LIB(Magick, GetMagickInfo)


#Check for the xrt3D lib and its dependancies
AC_ARG_ENABLE(xrt3d,
	 	[  --enable-xrt3d           enable xrt3d support (default is no)],
		[with_xrt=$enableval],
		[with_xrt='no'])
if test $with_xrt != 'no'
then
   if test $with_xrt = 'yes'
   then
	XRTLIBS=''
	XRTINCLUDE=''
   else
	XRTLIBS="$with_xrt/lib -lxrt3d -lpdsutil"
	XRTINCLUDE="$with_xrt/include"
   fi
   MRM_LIB=''
   AC_CHECK_LIB(Mrm,MrmInitialize,MRM_LIB='-lMrm',,)
   XRTLIBS="$XRTLIBS $MRM_LIB"
   XM_LIB=''
   AC_CHECK_LIB(Xm,XmIsMotifWMRunning,XM_LIB='-lXm',,)
   XRTLIBS="$XRTLIBS $XM_LIB"
   XPM_LIB=''
   AC_CHECK_LIB(Xpm,XpmReadFileToImage,XPM_LIB='-lXpm',,)
   XRTLIBS="$XRTLIBS $XPM_LIB"

   AC_DEFINE(XRT_ENABLED)
   AC_DEFINE(HAVE_LIBXM)
fi

dnl Check for includes
AC_CHECK_HEADERS(values.h)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h malloc.h sys/file.h sys/time.h unistd.h)
AC_CHECK_HEADERS(magick.h magick/api.h projects.h my_list.h Xm/Xrt3d.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(mkdir putenv select strdup strspn strstr strtod strtol strtoul)
AC_CHECK_FUNCS(index rindex getdtablesize getwd usleep strtoul basename)
AC_CHECK_FUNCS(dirname bcopy bcmp bzero)

if test "$x_includes" != ""
then
	XINCLUDES=-I$x_includes
else
	XINCLUDES=''
fi

if test "$x_libraries" != ""
then
	XLIBS=-L$x_libraries
else
	XLIBS=''
fi

AC_SUBST(READLINE_OBJ)
AC_SUBST(READLINE_LIB)
AC_SUBST(MAKEREAD)
AC_SUBST(XINCLUDES)
AC_SUBST(XLIBS)
AC_SUBST(XRTINCLUDE)
AC_SUBST(XRTLIBS)

AC_OUTPUT(lib/Makefile Makefile)
