dnl Process this file with autoconf to produce a configure script.
AC_INIT(gif_lib.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

AC_AIX

dnl Checks for header files.
AC_PATH_X
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_FUNC_SETVBUF_REVERSED
AC_FUNC_VPRINTF

dnl Substitute the following additional variables
AC_SUBST(CFLAGS)
AC_SUBST(LDFLAGS)

AC_OUTPUT(Makefile)
